Fixed spacing issues and set max width for desktop

--- a/app/assets/stylesheets/design-patterns/_global-nav.scss
+++ b/app/assets/stylesheets/design-patterns/_global-nav.scss
@@ -27,6 +27,8 @@ $beta-colour: $orange;
 
     @include media(desktop){
       text-align: right;
+      width: 1020px;
+      margin: 0 auto;
     }
 
     .inner {
