--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -34,7 +34,7 @@
 .inner {
   margin: 0 auto;
 //  padding: 1em;
-  padding: 30px;
+  padding: 20px 30px;
   position: relative;
 }
 
